# mosc

./: .gitignore  Cargo.toml  README.md
compiler/: Cargo.toml
compiler/src/: main.rs
parser/: Cargo.toml
parser/src/: config.rs  constants.rs  context.rs  errors.rs  lib.rs  warnings.rs
parser/src/io/: mod.rs
parser/src/io/readers/: cursor.rs  mod.rs  span.rs
parser/src/parsers/: file.rs  files.rs  mod.rs  result.rs  utils.rs
parser/src/parsers/commons/: comments.rs  identifier.rs  mod.rs  whitespaces.rs
parser/src/parsers/expressions/: literals.rs  mod.rs  numbers.rs
parser/src/parsers/expressions/literals/: integer.rs  mod.rs  numbers.rs
parser/src/parsers/statements/: mod.rs  return_statement.rs  variable_declaration.rs
parser/src/test/: mod.rs
