[package]
name = "parser"
description = "The parser module of the Mosfet Language"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2018"
homepage = "https://mosfetlang.org"

[dependencies]
memchr = "2.3.4"
bytecount = "0.6.2"
num-rational = "0.3.2"
num-bigint = "0.3.1"
parking_lot = "0.11.1"