[package]
name = "parser"
description = "The official parser of the Mosfet Language"
version = "0.1.0"
authors = ["Julio Treviño Páez <julio.tpaez@gmail.com>"]
edition = "2018"
homepage = "https://mosfetlang.org"

[dependencies]
arcstr = { version = "1.0.0", features = ["substr-usize-indices"] }
bytecount = "0.6.2"
doclog = { path = "../../doclog" }
parking_lot = "0.11.1"
memchr = "2.3.4"
